--- a/src/main/webapp/app/entities/question/update/question-update.component.html
+++ b/src/main/webapp/app/entities/question/update/question-update.component.html
@@ -90,6 +90,21 @@
             </option>
           </select>
         </div>
+
+        <div class="form-group">
+          <label class="form-control-label" for="field_createdBy">Created By</label>
+          <select class="form-control" id="field_createdBy" data-cy="createdBy" name="createdBy" formControlName="createdBy">
+            <option [ngValue]="null"></option>
+            <option
+              [ngValue]="
+                userAccountOption.id === editForm.get('createdBy')!.value?.id ? editForm.get('createdBy')!.value : userAccountOption
+              "
+              *ngFor="let userAccountOption of userAccountsSharedCollection; trackBy: trackUserAccountById"
+            >
+              {{ userAccountOption.id }}
+            </option>
+          </select>
+        </div>
       </div>
 
       <div>
