added public pages

--- a/src/main/webapp/app/home/home/home.component.html
+++ b/src/main/webapp/app/home/home/home.component.html
@@ -1,6 +1,6 @@
-<section class="home">
+<section class="video-container">
   <div class="bg-video">
-    <video class="bg-video__content" autoplay muted loop>
+    <video class="bg-video__content" autoplay [muted]="true" loop>
       <source src="../../../content/images/video.mp4" type="video/mp4" />
       <source src="../../../content/images/video.webm" type="video/webm" />
       Your browser is not supported!
