--- a/src/main/webapp/app/home/my-questions/my-questions.component.html
+++ b/src/main/webapp/app/home/my-questions/my-questions.component.html
@@ -1,1 +1,22 @@
-<p>my-questions works!</p>
+<section class="video-container">
+  <div class="bg-video">
+    <video class="bg-video__content" autoplay [muted]="true" loop>
+      <source src="../../../content/images/shells.mp4" type="video/mp4" />
+      <source src="../../../content/images/shells.webm" type="video/webm" />
+      Your browser is not supported!
+    </video>
+  </div>
+
+  <div class="row">
+    <div class="centered">
+      <div class="jumbotron wide">
+        <h4 class="display-5">Here you can forge your questions, champion!</h4>
+        <p class="lead">Remember, the excellence is in the balance - not too hard, but not too happy either!</p>
+        <hr class="my-4" />
+        <p>Don't hesitate, create your own quiz and start adding questions.</p>
+        <button type="button" class="btn btn-primary">Create Question</button>
+        <button type="button" class="btn btn-primary">Create Category</button>
+      </div>
+    </div>
+  </div>
+</section>
