--- a/src/main/webapp/app/home/my-quizzes/my-quizzes.component.html
+++ b/src/main/webapp/app/home/my-quizzes/my-quizzes.component.html
@@ -1,1 +1,9 @@
-<p>my-quizzes works!</p>
+<section class="video-container">
+  <div class="bg-video">
+    <video class="bg-video__content" autoplay [muted]="true" loop>
+      <source src="../../../content/images/shore.mp4" type="video/mp4" />
+      <source src="../../../content/images/shore.webm" type="video/webm" />
+      Your browser is not supported!
+    </video>
+  </div>
+</section>
