--- a/src/main/webapp/app/layouts/main/main.component.html
+++ b/src/main/webapp/app/layouts/main/main.component.html
@@ -5,7 +5,7 @@
 </div>
 
 <div class="container-fluid">
-  <div class="card jh-card" style="height: 90vh">
+  <div class="card jh-card" style="min-height: 90vh">
     <router-outlet></router-outlet>
   </div>
 
