--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -39,6 +39,44 @@ Generic styles
 ========================================================================== */
 
 /* other generic styles */
+.video-container {
+  position: relative;
+  height: 85vh;
+  max-width: 1440px;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid #d5d5d5;
+  border-radius: 10px;
+  box-shadow: inset 0px 0px 20px 20px rgba(256, 256, 256, 0.9);
+}
+
+.bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0.15;
+  overflow: hidden;
+}
+
+.bg-video__content {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.centered {
+  margin: auto;
+}
+
+.wide {
+  max-width: 1220px;
+  min-width: 610px;
+  max-height: 300px;
+}
 
 .jh-card {
   padding: 1.5%;
