--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -27,7 +27,7 @@
       <li *jhiHasAnyAuthority="'ROLE_USER'" class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
         <a class="nav-link" routerLink="my-dashboard" (click)="collapseNavbar()">
           <span>
-            <fa-icon icon="th-list"></fa-icon>
+            <fa-icon icon="chart-line"></fa-icon>
             <span>Dashboard</span>
           </span>
         </a>
@@ -35,7 +35,7 @@
       <li *jhiHasAnyAuthority="'ROLE_USER'" class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
         <a class="nav-link" routerLink="my-questions" (click)="collapseNavbar()">
           <span>
-            <fa-icon icon="th-list"></fa-icon>
+            <fa-icon icon="question"></fa-icon>
             <span>My Questions</span>
           </span>
         </a>
@@ -43,7 +43,7 @@
       <li *jhiHasAnyAuthority="'ROLE_USER'" class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
         <a class="nav-link" routerLink="my-quizzes" (click)="collapseNavbar()">
           <span>
-            <fa-icon icon="th-list"></fa-icon>
+            <fa-icon icon="play"></fa-icon>
             <span>My Quizzes</span>
           </span>
         </a>
