--- a/src/main/webapp/app/home/my-quizzes/my-quizzes.component.html
+++ b/src/main/webapp/app/home/my-quizzes/my-quizzes.component.html
@@ -6,4 +6,15 @@
       Your browser is not supported!
     </video>
   </div>
+
+  <div class="row">
+    <div class="centered">
+      <div class="jumbotron banner">
+        <h4 class="display-5">Crate a QUIZ, champion!</h4>
+        <p class="lead">Remember, the excellence is in the balance - not too hard, but not too happy either!</p>
+        <hr class="my-4" />
+        <p>Don't forget to share your quiz with a couple of friends and some beers!</p>
+      </div>
+    </div>
+  </div>
 </section>
